embedded-bitmap-text-macros/tests/ui/old_bitmap_fonts_removed_fail.stderr
error[E0432]: unresolved import `embedded_bitmap_text::bitmap_fonts`
 --> tests/ui/old_bitmap_fonts_removed_fail.rs:1:5
  |
1 | use embedded_bitmap_text::bitmap_fonts;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `bitmap_fonts` in the root
