embedded-bitmap-text-macros/tests/ui/old_bitmap_fonts_removed_fail.rs
use embedded_bitmap_text::bitmap_fonts;

fn main() {
    let _ = bitmap_fonts;
}
